--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,7 +8,7 @@
       </a>
     </li>
     <li class="uppercase"><a href="/">Home</a></li>
-    <li class="uppercase"><a href="/connect">Resources & Events</a></li>
+    <li class="uppercase"><a href="/connect">Connect</a></li>
     <li class="uppercase"><a href="/volunteer">Volunteer</a></li>
     <li class="uppercase"><a href="/faqs">FAQs</a></li>
     <li class="uppercase"><a href="https://turing.edu/donate">Donate</a></li>
